--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "clsx": "^1.1.1",
     "dotenv": "^16.0.3",
     "easymde": "^2.16.1",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.32.0",
+    "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
